<!-- Arquivo com todos os textos utilizados no app -->

<resources>
    <string name="app_name">VenturaHR</string>
    <string name="desc_intro">VenturaHR é um aplicativo que facilita a busca de empregos por meios de pesquisa de nome de vagas, empresa, critérios e mais! Se cadastre para obter mais funcionalidades!</string>
    <string name="btn_no_thanks">Não, obrigado</string>
    <string name="btn_sign_up">CADASTRAR</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Início</string>
    <string name="title_saved">Salvos</string>
    <string name="title_account">Conta</string>
    <string name="title_hello">Olá!</string>
    <string name="desc_search_jobs">Digite o nome da vaga, empresa ou critérios no campo abaixo!</string>
    <string name="hint_search_jobs">Procure por uma vaga!</string>
    <string name="title_recently_added">Últimas Vagas Publicadas</string>
    <string name="format_city">%s,</string>
    <string name="warning_empty_job_vacancy_list">Erro ao listar vagas. Tente novamente mais tarde</string>
    <string name="desc_company_logo">Company Logo</string>
    <string name="btn_save">SALVAR</string>
    <string name="btn_apply">APLICAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_details">Detalhes</string>
    <string name="tab_company">Empresa</string>
    <string name="txt_job_vacancy_description">Descrição</string>
    <string name="txt_criteria_list_title">Requisitos</string>
    <string name="contract_type_title">Tipo de Contrato</string>
    <string name="contract_duration_title">Duração de Contrato</string>
    <string name="closing_date_title">Data de Fechamento</string>
    <string name="empty_attribute">---</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="btn_forgot_password">Esqueceu sua senha?</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_txt_sign_up">Ainda não tem conta? Clique aqui</string>
    <string name="account_type_title">Tipo de Conta</string>
    <string name="name_hint">Nome</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Senha</string>
    <string name="phone_hint">Telefone</string>
    <string name="state_hint">Estado</string>
    <string name="canditade_radio_button">Candidato</string>
    <string name="company_radio_button">Empresa</string>
    <string name="admin_radio_button">Administrador</string>
    <string name="warning_invalid_form">Por favor, preencha todo o formulário.</string>
    <string name="state_title">Estado</string>
    <string name="cpf_hint">CPF</string>
    <string name="btn_confirm_form">CONFIRMAR</string>
    <string name="name_title">Nome</string>
    <string name="pmd_title">PMD:</string>
    <string name="weight_title">Peso:</string>
    <string name="description_title">Descrição</string>
    <string name="criteriaList">Requisitos</string>
    <string name="city">Cidade</string>
    <string name="loading">Carregando...</string>
    <string name="job_searching_title">Procurando por vagas: %1$s</string>
    <string name="btn_sign_out">SAIR</string>


    <string-array name="brazilian_states">
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goiás (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item> Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        Santa Catarina (SC)
        <item>São Paulo (SP)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>

    </string-array>

</resources>